= Changelog
:toc:

== v0.26.0: New ErrorParsing and minor fixes

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16, 1.17, 1.18 and 1.19.

* Expose ErrorParsing as a generic error

The ErrorParsing error indicates there was a problem parsing the cli args.

This can be used for example, to print the help only in cases where the user didn't enter valid cli args.

* Refactor dag package tests to remove most sleeps.

* Bug fix: Don't check for required options when the help option is passed

== v0.25.3: Minor Fixes

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.

=== Fixes

* When using `opt.Self`, if name is empty, use `filepath.Base(os.Args[0])`.

== v0.25.2: Minor Fixes

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.

=== Fixes

* Fix bug when running in `SingleDash` mode, if calling a single letter option with a single dash, and the option expects a value and the value wasn't provided with `=` or as a bundle then the option value wouldn't get registered.

== v0.25.1: Minor Fixes

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.

=== Minor changes

* When `HelpCommand` is declared, inject a `help` subcommand to all commands, not just the ones that have children.
This really simplifies discoverabilty for new users.

=== Fixes

* Maintain order of unknown options intermingled with arguments.
When using getoptions.Pass ensure that unknown options are passthrough in the same order they were given.
This is useful when doing wrappers.

== v0.25.0: Major Refactor

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.

=== Goal

This refactor brings major benefits in both parsing and autocompletion.
In the initial implementation, completion was added as side logic to the existing parser code.